# holographic-forecast

./: .gitignore  hello.py  pyproject.toml
aiforecast/data_collection/: data_models.py
arcaneforecast/: weather_models_tf.py
arcaneforecast/data/: data_embedding.py  data_models.py  openmeteo_data_collection.py
arcaneforecast/data_collection/: data_models.py  openmeteo_data_collection.py
example/open-meteo/: example_response_all_parameters.json  parse-test-data-cache.json
holographic_forecast/: weather_forecaster_torch.py  weather_models_tf.py  weather_models_torch.py  weather_system.py
holographic_forecast/data/: data_database.py  data_embedding.py  data_encoding.py  data_encoding_tf.py  data_encoding_torch.py  data_models.py  database_test.py  noaa_data_collection.py  openmeteo_data_collection.py
holographic_forecast/tests/: collection_test.py  embed_test.py  parse_test.py  prediction_model_test.py
holographic_forecast/tests/example/open-meteo/: model-test-data-cache.json  open-meteo-4-param-response-2-day.json
manual_tests/: embed_test.py  log_setup.py  noaa_collection_test.py  prediction_model_test.py
manual_tests/example/open-meteo/: open-meteo-4-param-response.json  parse-test-data-cache.json
noaa_cache/: collection_test_cache.pkl
tests/: collection_test.py  encode_test.py  encode_test_tf.py  noaa_collection_test.py  noaa_weather_collection_loading.py  parse_test.py  prediction_model_test.py  weather_forecaster_torch.py  weather_model_v1_test_torch.py  weather_system_test.py
tests/example/open-meteo/: open-meteo-4-param-response-2-day.json  parse-test-data-cache.json
tests/noaa_cache/: collection_test_cache.pkl
tests/sample/: collection_test_cache.pkl  sample_noaa_weather_collection.pkl
