[project]
name = "holographic-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "debugpy>=1.8.12",
    "keras>=3.8.0",
    "numpy>=2.0.2",
    "pyright>=1.1.396",
    "requests>=2.32.3",
    "tensorflow>=2.18.0",
]

[tool.basedpyright]
reportExplicitAny = false

[tool.ruff.format]
indent-style = "tab"

[dependency-groups]
dev = [
    "ipython>=9.0.2",
    "reindent>=3.5.1",
]
