[project]
name = "holographic-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.8.0",
    "numpy>=2.0.2",
    "portion",
    "pyright>=1.1.396",
    "requests>=2.32.3",
    "tensorflow>=2.18.0",
]

[tool.basedpyright]
reportExplicitAny = false

[tool.ruff.format]
indent-style = "space"

[tool.uv.sources]
portion = { git = "https://github.com/FuexFollets/portion.git", rev = "afbe614a3b026d5157d35d7d602b32aaa6d3a093" }

[dependency-groups]
dev = [
    "debugpy>=1.8.12",
    "ipython>=9.0.2",
    "reindent>=3.5.1",
]
