[project]
name = "holographic-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.14",
    "aiolimiter>=1.2.1",
    "keras>=3.8.0",
    "noaa-cdo-api>=0.0.2",
    "numpy>=2.0.2",
    "portion",
    "pyright>=1.1.396",
    "requests>=2.32.3",
    "tensorflow>=2.18.0",
]

[tool.setuptools]
packages = ["holographic_forecast", "tests"]

[tool.basedpyright]
reportExplicitAny = false

[tool.ruff.format]
indent-style = "space"

[tool.uv.sources]
portion = { git = "https://github.com/FuexFollets/portion.git", rev = "afbe614a3b026d5157d35d7d602b32aaa6d3a093" }

[dependency-groups]
dev = [
    "debugpy>=1.8.12",
    "dotenv>=0.9.9",
    "ipython>=9.0.2",
    "pytest>=8.3.5",
    "reindent>=3.5.1",
]
